tests/NormalTests/paczka1/fuzzy1/77058698.err
Error in line 2: Ks2kNP6KDR6 A474 36,7
Error in line 1: VFRfD S621 68,0
Error in line 7: 7qKDApo S621 69,4
Error in line 6: 6PEqna9T A939 45,8
Error in line 12: 6PEqna9T A607 53,0
Error in line 21: A474 S621 4,4
Error in line 19: 6PEqna9T A939 48,4
Error in line 31: A474 A607 39,94
Error in line 25: A474 A607 15,5
